--- a/ML_12.ipynb
+++ b/ML_12.ipynb
@@ -606,21 +606,23 @@
       "text/plain": [
        "array(['RA_ICRS', 'DE_ICRS', 'Name', 'TYPE', 'Z', 'zsp', 'spCl',\n",
        "       'band_num', 'radio_detect', 'LOFAR_detect', 'Sint_LOFAR',\n",
-       "       'Sint_LOFAR_AB', 'is_str', 'is_SDSS_QSO', 'is_AGN', 'is_SDSS_gal',\n",
-       "       'is_gal', 'W1mproPM', 'W2mproPM', 'gmag', 'rmag', 'imag', 'zmag',\n",
-       "       'ymag', 'W3mag', 'W4mag', 'Jmag', 'Hmag', 'Kmag', 'g_r', 'g_i',\n",
-       "       'g_z', 'g_y', 'g_J', 'g_H', 'g_K', 'g_W1', 'g_W2', 'g_W3', 'g_W4',\n",
-       "       'r_i', 'r_z', 'r_y', 'r_J', 'r_H', 'r_K', 'r_W1', 'r_W2', 'r_W3',\n",
-       "       'r_W4', 'i_z', 'i_y', 'i_J', 'i_H', 'i_K', 'i_W1', 'i_W2', 'i_W3',\n",
-       "       'i_W4', 'z_y', 'z_J', 'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', 'z_W4',\n",
-       "       'y_J', 'y_H', 'y_K', 'y_W1', 'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K',\n",
-       "       'J_W1', 'J_W2', 'J_W3', 'J_W4', 'H_K', 'H_W1', 'H_W2', 'H_W3',\n",
-       "       'H_W4', 'K_W1', 'K_W2', 'K_W3', 'K_W4', 'W1_W2', 'W1_W3', 'W1_W4',\n",
-       "       'W2_W3', 'W2_W4', 'W3_W4', 'class', 'radio_AGN', 'pred_class',\n",
-       "       'Score_AGN', 'Prob_AGN', 'pred_class_cal', 'pred_radio_AGN',\n",
-       "       'Score_radio_AGN', 'Prob_radio_AGN', 'pred_radio_cal_AGN',\n",
-       "       'pred_radio_gal', 'Score_radio_gal', 'Prob_radio_gal',\n",
-       "       'pred_radio_cal_gal', 'pred_Z_rAGN', 'pred_Z_rGal'], dtype=object)"
+       "       'Sint_LOFAR_AB', 'Speak_LOFAR', 'rms_LOFAR', 'Sint_LOFAR_non_imp',\n",
+       "       'Sint_LOFAR_AB_non_imp', 'Speak_LOFAR_non_imp', 'is_str',\n",
+       "       'is_SDSS_QSO', 'is_AGN', 'is_SDSS_gal', 'is_gal', 'W1mproPM',\n",
+       "       'W2mproPM', 'gmag', 'rmag', 'imag', 'zmag', 'ymag', 'W3mag',\n",
+       "       'W4mag', 'Jmag', 'Hmag', 'Kmag', 'g_r', 'g_i', 'g_z', 'g_y', 'g_J',\n",
+       "       'g_H', 'g_K', 'g_W1', 'g_W2', 'g_W3', 'g_W4', 'r_i', 'r_z', 'r_y',\n",
+       "       'r_J', 'r_H', 'r_K', 'r_W1', 'r_W2', 'r_W3', 'r_W4', 'i_z', 'i_y',\n",
+       "       'i_J', 'i_H', 'i_K', 'i_W1', 'i_W2', 'i_W3', 'i_W4', 'z_y', 'z_J',\n",
+       "       'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', 'z_W4', 'y_J', 'y_H', 'y_K',\n",
+       "       'y_W1', 'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K', 'J_W1', 'J_W2',\n",
+       "       'J_W3', 'J_W4', 'H_K', 'H_W1', 'H_W2', 'H_W3', 'H_W4', 'K_W1',\n",
+       "       'K_W2', 'K_W3', 'K_W4', 'W1_W2', 'W1_W3', 'W1_W4', 'W2_W3',\n",
+       "       'W2_W4', 'W3_W4', 'class', 'radio_AGN', 'pred_class', 'Score_AGN',\n",
+       "       'Prob_AGN', 'pred_class_cal', 'pred_radio_AGN', 'Score_radio_AGN',\n",
+       "       'Prob_radio_AGN', 'pred_radio_cal_AGN', 'pred_radio_gal',\n",
+       "       'Score_radio_gal', 'Prob_radio_gal', 'pred_radio_cal_gal',\n",
+       "       'pred_Z_rAGN', 'pred_Z_rGal'], dtype=object)"
       ]
      },
      "execution_count": 28,
@@ -1995,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2012,23 +2014,25 @@
       "text/plain": [
        "array(['RA_ICRS', 'DE_ICRS', 'Name', 'TYPE', 'Z', 'zsp', 'spCl',\n",
        "       'band_num', 'radio_detect', 'LOFAR_detect', 'Sint_LOFAR',\n",
-       "       'Sint_LOFAR_AB', 'is_str', 'is_SDSS_QSO', 'is_AGN', 'is_SDSS_gal',\n",
-       "       'is_gal', 'W1mproPM', 'W2mproPM', 'gmag', 'rmag', 'imag', 'zmag',\n",
-       "       'ymag', 'W3mag', 'W4mag', 'Jmag', 'Hmag', 'Kmag', 'g_r', 'g_i',\n",
-       "       'g_z', 'g_y', 'g_J', 'g_H', 'g_K', 'g_W1', 'g_W2', 'g_W3', 'g_W4',\n",
-       "       'r_i', 'r_z', 'r_y', 'r_J', 'r_H', 'r_K', 'r_W1', 'r_W2', 'r_W3',\n",
-       "       'r_W4', 'i_z', 'i_y', 'i_J', 'i_H', 'i_K', 'i_W1', 'i_W2', 'i_W3',\n",
-       "       'i_W4', 'z_y', 'z_J', 'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', 'z_W4',\n",
-       "       'y_J', 'y_H', 'y_K', 'y_W1', 'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K',\n",
-       "       'J_W1', 'J_W2', 'J_W3', 'J_W4', 'H_K', 'H_W1', 'H_W2', 'H_W3',\n",
-       "       'H_W4', 'K_W1', 'K_W2', 'K_W3', 'K_W4', 'W1_W2', 'W1_W3', 'W1_W4',\n",
-       "       'W2_W3', 'W2_W4', 'W3_W4', 'class', 'radio_AGN', 'pred_class',\n",
-       "       'Score_AGN', 'Prob_AGN', 'pred_class_cal', 'pred_radio_AGN',\n",
-       "       'Score_radio_AGN', 'Prob_radio_AGN', 'pred_radio_cal_AGN',\n",
-       "       'pred_radio_gal', 'Score_radio_gal', 'Prob_radio_gal',\n",
-       "       'pred_radio_cal_gal', 'pred_Z_rAGN', 'pred_Z_rGal', 'Score_rAGN',\n",
-       "       'pred_prob_rAGN', 'Prob_rAGN', 'Score_rGal', 'pred_prob_rGal',\n",
-       "       'Prob_rGal', 'Delta_z_N', 'sigma_NMAD'], dtype=object)"
+       "       'Sint_LOFAR_AB', 'Speak_LOFAR', 'rms_LOFAR', 'Sint_LOFAR_non_imp',\n",
+       "       'Sint_LOFAR_AB_non_imp', 'Speak_LOFAR_non_imp', 'is_str',\n",
+       "       'is_SDSS_QSO', 'is_AGN', 'is_SDSS_gal', 'is_gal', 'W1mproPM',\n",
+       "       'W2mproPM', 'gmag', 'rmag', 'imag', 'zmag', 'ymag', 'W3mag',\n",
+       "       'W4mag', 'Jmag', 'Hmag', 'Kmag', 'g_r', 'g_i', 'g_z', 'g_y', 'g_J',\n",
+       "       'g_H', 'g_K', 'g_W1', 'g_W2', 'g_W3', 'g_W4', 'r_i', 'r_z', 'r_y',\n",
+       "       'r_J', 'r_H', 'r_K', 'r_W1', 'r_W2', 'r_W3', 'r_W4', 'i_z', 'i_y',\n",
+       "       'i_J', 'i_H', 'i_K', 'i_W1', 'i_W2', 'i_W3', 'i_W4', 'z_y', 'z_J',\n",
+       "       'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', 'z_W4', 'y_J', 'y_H', 'y_K',\n",
+       "       'y_W1', 'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K', 'J_W1', 'J_W2',\n",
+       "       'J_W3', 'J_W4', 'H_K', 'H_W1', 'H_W2', 'H_W3', 'H_W4', 'K_W1',\n",
+       "       'K_W2', 'K_W3', 'K_W4', 'W1_W2', 'W1_W3', 'W1_W4', 'W2_W3',\n",
+       "       'W2_W4', 'W3_W4', 'class', 'radio_AGN', 'pred_class', 'Score_AGN',\n",
+       "       'Prob_AGN', 'pred_class_cal', 'pred_radio_AGN', 'Score_radio_AGN',\n",
+       "       'Prob_radio_AGN', 'pred_radio_cal_AGN', 'pred_radio_gal',\n",
+       "       'Score_radio_gal', 'Prob_radio_gal', 'pred_radio_cal_gal',\n",
+       "       'pred_Z_rAGN', 'pred_Z_rGal', 'Score_rAGN', 'pred_prob_rAGN',\n",
+       "       'Prob_rAGN', 'Score_rGal', 'pred_prob_rGal', 'Prob_rGal',\n",
+       "       'Delta_z_N', 'sigma_NMAD'], dtype=object)"
       ]
      },
      "execution_count": 50,
@@ -2042,59 +2046,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "if save_full_flag:\n",
     "    if used_area == 'S82':\n",
     "        cols_2_save = ['RA_ICRS', 'DE_ICRS', 'Name', 'TYPE', 'Z', 'band_num', 'Fint_VLAS82', \n",
-    "                       'Fint_VLAS82_AB', 'is_str', 'W1mproPM', 'W2mproPM', 'gmag', 'rmag', 'imag', \n",
-    "                       'zmag', 'ymag', 'W3mag', 'W4mag', 'Jmag', 'Hmag', 'Kmag', 'g_r', 'g_i', \n",
-    "                       'g_z', 'g_y', 'g_J', 'g_H', 'g_K', 'g_W1', 'g_W2', 'g_W3', 'g_W4', 'r_i', \n",
-    "                       'r_z', 'r_y', 'r_J', 'r_H', 'r_K', 'r_W1', 'r_W2', 'r_W3', 'r_W4', 'i_z', \n",
-    "                       'i_y', 'i_J', 'i_H', 'i_K', 'i_W1', 'i_W2', 'i_W3', 'i_W4', 'z_y', 'z_J', \n",
-    "                       'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', 'z_W4', 'y_J', 'y_H', 'y_K', 'y_W1', \n",
-    "                       'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K', 'J_W1', 'J_W2', 'J_W3', 'J_W4', 'H_K', \n",
-    "                       'H_W1', 'H_W2', 'H_W3', 'H_W4', 'K_W1', 'K_W2', 'K_W3', 'K_W4', 'W1_W2', \n",
-    "                       'W1_W3', 'W1_W4', 'W2_W3', 'W2_W4', 'W3_W4', 'radio_detect', 'LOFAR_detect', \n",
-    "                       'class', 'radio_AGN', 'Prob_AGN', 'Prob_radio_AGN', 'Prob_radio_gal', \n",
-    "                       'pred_Z_rAGN', 'pred_Z_rGal', 'pred_class_cal', 'pred_radio_cal_AGN', \n",
-    "                       'pred_radio_cal_gal', 'pred_prob_rAGN', 'Prob_rAGN', 'pred_prob_rGal', 'Prob_rGal']\n",
+    "                       'Fint_VLAS82_AB', 'Fint_VLAS82_non_imp', 'rms_VLAS82', 'is_str', 'W1mproPM', \n",
+    "                       'W2mproPM', 'gmag', 'rmag', 'imag', 'zmag', 'ymag', 'W3mag', 'W4mag', 'Jmag', \n",
+    "                       'Hmag', 'Kmag', 'g_r', 'g_i', 'g_z', 'g_y', 'g_J', 'g_H', 'g_K', 'g_W1', \n",
+    "                       'g_W2', 'g_W3', 'g_W4', 'r_i', 'r_z', 'r_y', 'r_J', 'r_H', 'r_K', 'r_W1', \n",
+    "                       'r_W2', 'r_W3', 'r_W4', 'i_z', 'i_y', 'i_J', 'i_H', 'i_K', 'i_W1', 'i_W2', \n",
+    "                       'i_W3', 'i_W4', 'z_y', 'z_J', 'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', 'z_W4', \n",
+    "                       'y_J', 'y_H', 'y_K', 'y_W1', 'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K', 'J_W1', \n",
+    "                       'J_W2', 'J_W3', 'J_W4', 'H_K', 'H_W1', 'H_W2', 'H_W3', 'H_W4', 'K_W1', \n",
+    "                       'K_W2', 'K_W3', 'K_W4', 'W1_W2', 'W1_W3', 'W1_W4', 'W2_W3', 'W2_W4', \n",
+    "                       'W3_W4', 'radio_detect', 'LOFAR_detect', 'class', 'radio_AGN', 'Prob_AGN', \n",
+    "                       'Prob_radio_AGN', 'Prob_radio_gal', 'pred_Z_rAGN', 'pred_Z_rGal', \n",
+    "                       'pred_class_cal', 'pred_radio_cal_AGN', 'pred_radio_cal_gal', \n",
+    "                       'pred_prob_rAGN', 'Prob_rAGN', 'pred_prob_rGal', 'Prob_rGal']\n",
     "    if used_area == 'HETDEX':\n",
     "        cols_2_save = ['RA_ICRS', 'DE_ICRS', 'Name', 'TYPE', 'Z', 'band_num', 'Sint_LOFAR', \n",
-    "                       'Sint_LOFAR_AB', 'is_str', 'W1mproPM', 'W2mproPM', 'gmag', 'rmag', 'imag', \n",
-    "                       'zmag', 'ymag', 'W3mag', 'W4mag', 'Jmag', 'Hmag', 'Kmag', 'g_r', 'g_i', \n",
-    "                       'g_z', 'g_y', 'g_J', 'g_H', 'g_K', 'g_W1', 'g_W2', 'g_W3', 'g_W4', 'r_i', \n",
-    "                       'r_z', 'r_y', 'r_J', 'r_H', 'r_K', 'r_W1', 'r_W2', 'r_W3', 'r_W4', 'i_z', \n",
-    "                       'i_y', 'i_J', 'i_H', 'i_K', 'i_W1', 'i_W2', 'i_W3', 'i_W4', 'z_y', 'z_J', \n",
-    "                       'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', 'z_W4', 'y_J', 'y_H', 'y_K', 'y_W1', \n",
-    "                       'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K', 'J_W1', 'J_W2', 'J_W3', 'J_W4', 'H_K', \n",
-    "                       'H_W1', 'H_W2', 'H_W3', 'H_W4', 'K_W1', 'K_W2', 'K_W3', 'K_W4', 'W1_W2', \n",
-    "                       'W1_W3', 'W1_W4', 'W2_W3', 'W2_W4', 'W3_W4', 'radio_detect', 'LOFAR_detect', \n",
-    "                       'class', 'radio_AGN', 'Prob_AGN', 'Prob_radio_AGN', 'Prob_radio_gal', \n",
-    "                       'pred_Z_rAGN', 'pred_Z_rGal', 'pred_class_cal', 'pred_radio_cal_AGN', \n",
-    "                       'pred_radio_cal_gal', 'pred_prob_rAGN', 'Prob_rAGN', 'pred_prob_rGal', 'Prob_rGal']"
+    "                       'Sint_LOFAR_AB', 'Sint_LOFAR_non_imp', 'rms_LOFAR', 'is_str', 'W1mproPM', \n",
+    "                       'W2mproPM', 'gmag', 'rmag', 'imag', 'zmag', 'ymag', 'W3mag', 'W4mag', \n",
+    "                       'Jmag', 'Hmag', 'Kmag', 'g_r', 'g_i', 'g_z', 'g_y', 'g_J', 'g_H', 'g_K',\n",
+    "                       'g_W1', 'g_W2', 'g_W3', 'g_W4', 'r_i', 'r_z', 'r_y', 'r_J', 'r_H', 'r_K', \n",
+    "                       'r_W1', 'r_W2', 'r_W3', 'r_W4', 'i_z','i_y', 'i_J', 'i_H', 'i_K', 'i_W1', \n",
+    "                       'i_W2', 'i_W3', 'i_W4', 'z_y', 'z_J', 'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', \n",
+    "                       'z_W4', 'y_J', 'y_H', 'y_K', 'y_W1', 'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K', \n",
+    "                       'J_W1', 'J_W2', 'J_W3', 'J_W4', 'H_K', 'H_W1', 'H_W2', 'H_W3', 'H_W4', \n",
+    "                       'K_W1', 'K_W2', 'K_W3', 'K_W4', 'W1_W2', 'W1_W3', 'W1_W4', 'W2_W3', \n",
+    "                       'W2_W4', 'W3_W4', 'radio_detect', 'LOFAR_detect', 'class', 'radio_AGN', \n",
+    "                       'Prob_AGN', 'Prob_radio_AGN', 'Prob_radio_gal', 'pred_Z_rAGN', \n",
+    "                       'pred_Z_rGal', 'pred_class_cal', 'pred_radio_cal_AGN', 'pred_radio_cal_gal', \n",
+    "                       'pred_prob_rAGN', 'Prob_rAGN', 'pred_prob_rGal', 'Prob_rGal']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File pred_rAGN/HETDEX_full_prediction.h5 saved\n"
+     ]
+    }
+   ],
    "source": [
     "if save_full_flag:\n",
     "    saving_data_full       = full_catalog_df.loc[:, cols_2_save]\n",
     "    saving_data_full['ID'] = saving_data_full.index\n",
-    "    saving_data_full.to_hdf(gv.preds_path + f'{used_area}_full_prediction.h5', key='df')"
+    "    saving_data_full.to_hdf(gv.preds_path + f'{used_area}_full_prediction.h5', key='df')\n",
+    "    print(f'File {gv.preds_path}{used_area}_full_prediction.h5 saved')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
