save peak flux LOFAR

--- a/ML_12.ipynb
+++ b/ML_12.ipynb
@@ -2001,7 +2001,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_full_flag = False"
+    "save_full_flag = True"
    ]
   },
   {
@@ -2068,18 +2068,19 @@
     "                       'pred_prob_rAGN', 'Prob_rAGN', 'pred_prob_rGal', 'Prob_rGal']\n",
     "    if used_area == 'HETDEX':\n",
     "        cols_2_save = ['RA_ICRS', 'DE_ICRS', 'Name', 'TYPE', 'Z', 'band_num', 'Sint_LOFAR', \n",
-    "                       'Sint_LOFAR_AB', 'Sint_LOFAR_non_imp', 'rms_LOFAR', 'is_str', 'W1mproPM', \n",
-    "                       'W2mproPM', 'gmag', 'rmag', 'imag', 'zmag', 'ymag', 'W3mag', 'W4mag', \n",
-    "                       'Jmag', 'Hmag', 'Kmag', 'g_r', 'g_i', 'g_z', 'g_y', 'g_J', 'g_H', 'g_K',\n",
-    "                       'g_W1', 'g_W2', 'g_W3', 'g_W4', 'r_i', 'r_z', 'r_y', 'r_J', 'r_H', 'r_K', \n",
-    "                       'r_W1', 'r_W2', 'r_W3', 'r_W4', 'i_z','i_y', 'i_J', 'i_H', 'i_K', 'i_W1', \n",
-    "                       'i_W2', 'i_W3', 'i_W4', 'z_y', 'z_J', 'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', \n",
-    "                       'z_W4', 'y_J', 'y_H', 'y_K', 'y_W1', 'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K', \n",
-    "                       'J_W1', 'J_W2', 'J_W3', 'J_W4', 'H_K', 'H_W1', 'H_W2', 'H_W3', 'H_W4', \n",
-    "                       'K_W1', 'K_W2', 'K_W3', 'K_W4', 'W1_W2', 'W1_W3', 'W1_W4', 'W2_W3', \n",
-    "                       'W2_W4', 'W3_W4', 'radio_detect', 'LOFAR_detect', 'class', 'radio_AGN', \n",
-    "                       'Prob_AGN', 'Prob_radio_AGN', 'Prob_radio_gal', 'pred_Z_rAGN', \n",
-    "                       'pred_Z_rGal', 'pred_class_cal', 'pred_radio_cal_AGN', 'pred_radio_cal_gal', \n",
+    "                       'Sint_LOFAR_AB', 'Sint_LOFAR_non_imp', 'rms_LOFAR', 'Speak_LOFAR', \n",
+    "                       'Speak_LOFAR_non_imp', 'is_str', 'W1mproPM', 'W2mproPM', 'gmag', 'rmag', \n",
+    "                       'imag', 'zmag', 'ymag', 'W3mag', 'W4mag', 'Jmag', 'Hmag', 'Kmag', 'g_r', \n",
+    "                       'g_i', 'g_z', 'g_y', 'g_J', 'g_H', 'g_K', 'g_W1', 'g_W2', 'g_W3', 'g_W4', \n",
+    "                       'r_i', 'r_z', 'r_y', 'r_J', 'r_H', 'r_K', 'r_W1', 'r_W2', 'r_W3', 'r_W4', \n",
+    "                       'i_z','i_y', 'i_J', 'i_H', 'i_K', 'i_W1', 'i_W2', 'i_W3', 'i_W4', 'z_y', \n",
+    "                       'z_J', 'z_H', 'z_K', 'z_W1', 'z_W2', 'z_W3', 'z_W4', 'y_J', 'y_H', 'y_K', \n",
+    "                       'y_W1', 'y_W2', 'y_W3', 'y_W4', 'J_H', 'J_K', 'J_W1', 'J_W2', 'J_W3', \n",
+    "                       'J_W4', 'H_K', 'H_W1', 'H_W2', 'H_W3', 'H_W4', 'K_W1', 'K_W2', 'K_W3', \n",
+    "                       'K_W4', 'W1_W2', 'W1_W3', 'W1_W4', 'W2_W3', 'W2_W4', 'W3_W4', \n",
+    "                       'radio_detect', 'LOFAR_detect', 'class', 'radio_AGN', 'Prob_AGN', \n",
+    "                       'Prob_radio_AGN', 'Prob_radio_gal', 'pred_Z_rAGN', 'pred_Z_rGal', \n",
+    "                       'pred_class_cal', 'pred_radio_cal_AGN', 'pred_radio_cal_gal', \n",
     "                       'pred_prob_rAGN', 'Prob_rAGN', 'pred_prob_rGal', 'Prob_rGal']"
    ]
   },
