study bright galaxies

--- a/ML_12.ipynb
+++ b/ML_12.ipynb
@@ -2088,12 +2088,26 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if save_full_flag:\n",
+    "#     saving_data_full       = full_catalog_df.loc[:, cols_2_save]\n",
+    "#     saving_data_full['ID'] = saving_data_full.index\n",
+    "#     saving_data_full.to_hdf(gv.preds_path + f'{used_area}_full_prediction.h5', key='df')\n",
+    "#     print(f'File {gv.preds_path}{used_area}_full_prediction.h5 saved')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File pred_rAGN/HETDEX_full_prediction.h5 saved\n"
+      "File pred_rAGN/HETDEX_full_prediction.h5 saved\n",
+      "File pred_rAGN/HETDEX_full_prediction.parquet saved\n"
      ]
     }
    ],
@@ -2101,16 +2115,17 @@
     "if save_full_flag:\n",
     "    saving_data_full       = full_catalog_df.loc[:, cols_2_save]\n",
     "    saving_data_full['ID'] = saving_data_full.index\n",
-    "    saving_data_full.to_hdf(gv.preds_path + f'{used_area}_full_prediction.h5', key='df')\n",
-    "    print(f'File {gv.preds_path}{used_area}_full_prediction.h5 saved')"
+    "    try:\n",
+    "        saving_data_full.to_hdf(gv.preds_path + f'{used_area}_full_prediction.h5', key='df')\n",
+    "        print(f'File {gv.preds_path}{used_area}_full_prediction.h5 saved')\n",
+    "    except:\n",
+    "        print(f'File {gv.preds_path}{used_area}_full_prediction.h5 was not saved')\n",
+    "    try:\n",
+    "        saving_data_full.to_parquet(gv.preds_path + f'{used_area}_full_prediction.parquet', index=True, engine='fastparquet')\n",
+    "        print(f'File {gv.preds_path}{used_area}_full_prediction.parquet saved')\n",
+    "    except:\n",
+    "        print(f'File {gv.preds_path}{used_area}_full_prediction.parquet was not saved')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2136,7 +2151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
