--- a/ML_12.ipynb
+++ b/ML_12.ipynb
@@ -970,17 +970,15 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# filter_radio_AGN_p      = np.array(full_catalog_df.loc[:, 'Score_AGN']          >= threshold_AGN) &\\\n",
     "#                             np.array(full_catalog_df.loc[:, 'Score_radio']      >= threshold_radio)\n",
     "filter_radio_AGN_p      = np.array(full_catalog_df.loc[:, 'pred_class_cal']      == 1) &\\\n",
     "                            np.array(full_catalog_df.loc[:, 'pred_radio_cal_AGN']    == 1)\n",
+    "filter_radio_SFG_p      = np.array(full_catalog_df.loc[:, 'pred_class_cal']      == 0) &\\\n",
+    "                            np.array(full_catalog_df.loc[:, 'pred_radio_cal_gal']    == 1)\n",
     "filt_hiz_rAGN_p         = filter_radio_AGN_p * np.array(full_catalog_df.loc[:, 'pred_Z_rAGN'] >= gv.high_z_limit)\n",
     "filter_AGN_p            = np.array(full_catalog_df.loc[:, 'pred_class_cal']      == 1)\n",
     "filter_radio_p          = np.array(full_catalog_df.loc[:, 'pred_radio_cal_AGN']      == 1)\n",
@@ -988,6 +986,86 @@
     "num_gal_p               = np.sum(np.array(full_catalog_df.loc[:, 'pred_class_cal'] == 0))\n",
     "num_radio_p             = np.sum(filter_radio_p)\n",
     "num_radio_AGN_p         = np.sum(filter_radio_AGN_p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5110083"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.array(full_catalog_df.loc[:, 'pred_class_cal'] == 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10026795"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.array(full_catalog_df.loc[:, 'pred_class_cal'] == 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "163272"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.array(full_catalog_df.loc[:, 'pred_class_cal'] == 0) & np.array(full_catalog_df.loc[:, 'pred_radio_cal_gal'] == 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98483"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.array(full_catalog_df.loc[:, 'pred_class_cal'] == 1) & np.array(full_catalog_df.loc[:, 'pred_radio_cal_AGN'] == 1))"
    ]
   },
   {
@@ -1017,9 +1095,6 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1042,9 +1117,6 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
