add some counts

--- a/describe_parquet_preds.ipynb
+++ b/describe_parquet_preds.ipynb
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "id": "9011fa16",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 47,
    "id": "8abe87e5-e0c4-43fc-8841-272d428638fa",
    "metadata": {},
    "outputs": [
@@ -1008,6 +1008,156 @@
     "    plt.savefig(gv.plots_path + f'hist_pred_true_z_HETDEX_{HETDEX_subset}_rAGN_rSFG.pdf', bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ed66d35-780e-48cf-bf53-2462ff536a40",
+   "metadata": {},
+   "source": [
+    "Show some counts of sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc4ee7c-00d3-4313-8382-fc2f6104ca5f",
+   "metadata": {},
+   "source": [
+    "Original LoTSS-DR1 sources in HETDEX area: 325 694"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "7c7cf62e-c011-4f5a-bb35-c4ef64cc7b5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "382430"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(true_HETDEX_radio_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9dd3bdc6-9c38-4c9d-bac7-7c2e35d23aa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17706"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(true_S82_radio_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "bcf6bd7f-9342-40bc-8203-a4e38212848f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8100"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(true_HETDEX_rAGN_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "be244f77-6a0f-4da2-ba3f-d2da5560a696",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9853"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(true_HETDEX_rGal_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "f033ee33-1bbd-4a7c-affa-5f4c3bd104b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "873"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(true_S82_rAGN_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "87295117-99a9-4b47-bd4b-70a5f0a1b1f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(true_S82_rGal_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3858419b-1f32-40a3-adcc-c63df73a06eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
