print conf matrxs

--- a/ML_06.ipynb
+++ b/ML_06.ipynb
@@ -479,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "used_area           = 'S82'  # can be 'S82', 'HETDEX', 'COSMOS'\n",
+    "used_area           = 'HETDEX'  # can be 'S82', 'HETDEX', 'COSMOS'\n",
     "HETDEX_subset       = 'Validation'  # Validation, Training, Test, Test+Train, 'Calibration'\n",
     "if used_area != 'HETDEX':\n",
     "    HETDEX_subset   = ''"
@@ -629,9 +629,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In the S82 field, there are 21,828 confirmed sources.\n",
-      "4,085 of them are galaxies.\n",
-      "17,743 of them are AGN.\n",
+      "In the HETDEX field, there are 118,734 confirmed sources.\n",
+      "68,196 of them are galaxies.\n",
+      "50,538 of them are AGN.\n",
       "0 of them are stars.\n"
      ]
     }
@@ -661,7 +661,25 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of used data in HETDEX\n",
+      "-----------------------------------------------------------------\n",
+      "Full confirmed dataset size:                      (118734, 103)\n",
+      "Data for Modeling (Train, Test, and Calibration): (94987, 103)\n",
+      "Training data:                                    (75989, 103)\n",
+      "Testing data:                                     (9499, 103)\n",
+      "Calibration data:                                 (9499, 103)\n",
+      "Validation data:                                  (23747, 103)\n",
+      "-----------------------------------------------------------------\n",
+      "\n",
+      "Using Validation data from HETDEX\n"
+     ]
+    }
+   ],
    "source": [
     "if used_area == 'HETDEX':\n",
     "    filter_known_spec = (full_catalog_df.loc[:, 'is_AGN'] == 1) | (full_catalog_df.loc[:, 'is_gal'] == 1)\n",
@@ -741,9 +759,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full used dataset size:              (21828, 101)\n",
+      "Full used dataset size:              (23747, 103)\n",
       "--------------------------------------------------\n",
-      "Thus, it has 21,828 sources and 101 features.\n"
+      "Thus, it has 23,747 sources and 103 features.\n"
      ]
     }
    ],
@@ -1040,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
@@ -1076,6 +1094,39 @@
     "\n",
     "cm_gal        = np.rot90(cm_AGN, k=2)\n",
     "cm_gal_random = np.rot90(cm_AGN_random, k=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13072   567]\n",
+      " [  383  9725]]\n",
+      "\n",
+      "[[7834 5805]\n",
+      " [5805 4303]]\n",
+      "\n",
+      "[[ 9725   383]\n",
+      " [  567 13072]]\n",
+      "\n",
+      "[[4303 5805]\n",
+      " [5805 7834]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cm_AGN)\n",
+    "print()\n",
+    "print(cm_AGN_random)\n",
+    "print()\n",
+    "print(cm_gal)\n",
+    "print()\n",
+    "print(cm_gal_random)"
    ]
   },
   {
@@ -1104,6 +1155,59 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7666 1030]\n",
+      " [ 843  753]]\n",
+      "\n",
+      "[[7367 1077]\n",
+      " [ 841  823]]\n",
+      "\n",
+      "[[7347 1349]\n",
+      " [1349  247]]\n",
+      "\n",
+      "[[7054 1390]\n",
+      " [1390  274]]\n",
+      "\n",
+      "[[10321  1062]\n",
+      " [ 1129   943]]\n",
+      "\n",
+      "[[10566  1069]\n",
+      " [ 1089   915]]\n",
+      "\n",
+      "[[9630 1753]\n",
+      " [1753  319]]\n",
+      "\n",
+      "[[9925 1710]\n",
+      " [1710  294]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cm_r_in_pred_AGN)\n",
+    "print()\n",
+    "print(cm_r_in_true_AGN)\n",
+    "print()\n",
+    "print(cm_r_in_pred_AGN_random)\n",
+    "print()\n",
+    "print(cm_r_in_true_AGN_random)\n",
+    "print()\n",
+    "print(cm_r_in_pred_gal)\n",
+    "print()\n",
+    "print(cm_r_in_true_gal)\n",
+    "print()\n",
+    "print(cm_r_in_pred_gal_random)\n",
+    "print()\n",
+    "print(cm_r_in_true_gal_random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {
     "tags": []
    },
@@ -1119,6 +1223,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7692 1093]\n",
+      " [ 817  690]]\n",
+      "\n",
+      "[[7499 1286]\n",
+      " [1286  221]]\n",
+      "\n",
+      "[[10382  1158]\n",
+      " [ 1068   847]]\n",
+      "\n",
+      "[[9898 1642]\n",
+      " [1642  273]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cm_rAGN)\n",
+    "print()\n",
+    "print(cm_rAGN_random)\n",
+    "print()\n",
+    "print(cm_rGal)\n",
+    "print()\n",
+    "print(cm_rGal_random)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1127,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,6 +1284,82 @@
     "cm_gal_M16 = np.rot90(cm_AGN_M16, k=2)\n",
     "cm_gal_B18 = np.rot90(cm_AGN_B18, k=2)\n",
     "cm_gal_C22 = np.rot90(cm_AGN_C22, k=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13118   521]\n",
+      " [ 1970  8138]]\n",
+      "\n",
+      "[[13596    43]\n",
+      " [ 6350  3758]]\n",
+      "\n",
+      "[[13499   140]\n",
+      " [ 4702  5406]]\n",
+      "\n",
+      "[[13454   185]\n",
+      " [ 2764  7344]]\n",
+      "\n",
+      "[[13048   591]\n",
+      " [  842  9266]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cm_AGN_S12)\n",
+    "print()\n",
+    "print(cm_AGN_M12)\n",
+    "print()\n",
+    "print(cm_AGN_M16)\n",
+    "print()\n",
+    "print(cm_AGN_B18)\n",
+    "print()\n",
+    "print(cm_AGN_C22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 8138  1970]\n",
+      " [  521 13118]]\n",
+      "\n",
+      "[[ 3758  6350]\n",
+      " [   43 13596]]\n",
+      "\n",
+      "[[ 5406  4702]\n",
+      " [  140 13499]]\n",
+      "\n",
+      "[[ 7344  2764]\n",
+      " [  185 13454]]\n",
+      "\n",
+      "[[ 9266   842]\n",
+      " [  591 13048]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cm_gal_S12)\n",
+    "print()\n",
+    "print(cm_gal_M12)\n",
+    "print()\n",
+    "print(cm_gal_M16)\n",
+    "print()\n",
+    "print(cm_gal_B18)\n",
+    "print()\n",
+    "print(cm_gal_C22)"
    ]
   },
   {
