--- a/ML_03.ipynb
+++ b/ML_03.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "18a83463",
    "metadata": {
     "jupyter": {
@@ -688,19 +688,15 @@
      "text": [
       "Final shape of used data\n",
       "-----------------------------------------------------------------\n",
-      "(Confirmed galaxies)\n",
-      "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'full_catalog_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(Confirmed galaxies)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFull confirmed dataset size:        \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfull_catalog_df\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData for Modeling (Train and Test): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_test_df\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining data:                      \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_df\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'full_catalog_df' is not defined"
+      "(Confirmed AGN)\n",
+      "--------------------------------------------------\n",
+      "Full confirmed dataset size:        (50538, 80)\n",
+      "Data for Modeling (Train and Test): (40430, 80)\n",
+      "Training data:                      (32344, 80)\n",
+      "Testing data:                       (4043, 80)\n",
+      "Calibration data:                   (4043, 80)\n",
+      "Validation data:                    (10108, 80)\n",
+      "-----------------------------------------------------------------\n"
      ]
     }
    ],
